--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
       <h1>Demo HTML</h1>
       <p>This is a demo of HTML.</p>
     </main>
+
+    <footer>
+      <p>&copy; 2024 Demo</p>
+    </footer>
   </body>
 </html>
